# vsa-compilation

./: Makefile  README.md  forth.html  forth.html.md  index.html  index.html.md  interpretation.html  interpretation.html.md  lisp.html  lisp.html.md  main.py  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  syntax.html  syntax.html.md  vsas.html  vsas.html.md
nbs/: 00_vsas.ipynb  01_syntax.ipynb  02_interpretation.ipynb  03_lisp.ipynb  04_forth.ipynb  index.ipynb  nbdev.yml  sidebar.yml
vsa_compilation/: _modidx.py  core.py  vsas.py
