[project]
name="vsa-compilation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "fastcore>=1.8.7",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.9.4",
    "nengo>=4.1.0",
    "nengo-spa>=2.0.0",
    "numpy>=2.0.2",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "nbdev>=2.4.5",
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
